--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,27 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.7.10-1.0"
+ext.configFile = file "build.properties"
+
+configFile.withReader {
+    def prop = new Properties()
+    prop.load(it)
+    project.ext.config = new ConfigSlurper().parse prop
+}
+
+version = config.mod_version
 group= "com.karsid.modtutorial" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ModTutorial"
 
 minecraft {
-    version = "1.7.10-10.13.0.1177"
+    version = config.minecraft_version + "-" + config.forge_version
     assetDir = "eclipse/assets"
+
+    replaceIn "reference/Reference.java"
+    replace "@VERSION@", "${config.mod_version}.${System.getenv("BUILD_NUMBER") ?: 0}"
 }
+
+version = "${config.minecraft_version}-${config.mod_version}.${System.getenv("BUILD_NUMBER") ?: 0}"
 
 dependencies {
     // you may put jars on which you depend on in ./libs
@@ -42,22 +55,20 @@ dependencies {
 
 }
 
-processResources
-{
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+processResources {
+    // exclude xcf files, as they are for development only
+    exclude '**/*.xcf'
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
+        include '*.info'
                 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'mod_version': project.version, 'minecraft_version': project.config.minecraft_version
     }
         
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
+        exclude '**/*.info'
     }
 }
